<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.currentnews.utils.BindingUtils" />

        <variable
            name="source"
            type="com.example.currentnews.models.Source" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:clipToPadding="false"
        android:paddingStart="@dimen/rv_horizontal_offset"
        android:paddingTop="@dimen/rv_vertical_offset"
        android:paddingEnd="@dimen/rv_horizontal_offset"
        android:paddingBottom="@dimen/rv_vertical_offset">
        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_source_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="26dp"
            android:text="@{source.name}"
            android:textAppearance="@style/AppTheme.Headline.Title"
            android:textColor="@color/colorTextSecondary"
            android:textSize="16sp"
            tools:text="@string/sample_source" />

        <TextView
            android:id="@+id/tv_source_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{BindingUtils.getSourceName(source.category, source.country)}"
            android:textColor="@color/colorTextSecondary"
            android:textSize="14sp"
            tools:text="@string/sample_category" />
    </LinearLayout>

        <TextView
            android:id="@+id/tv_source_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:alpha="0.8"
            android:lineSpacingMultiplier="1.3"
            android:text="@{source.description}"
            android:textColor="@color/colorTextSecondary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear" />

        <Button
            android:id="@+id/btn_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_type_text_selector"
            android:padding="10dp"
            android:text="@string/bottom_sheet_option_open_in_browser"
            android:textColor="@color/colorTextSecondary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_source_desc" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>